--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My webpage</title>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-  <link href='css/externalstyle.css' rel='stylesheet' type='text/css'>
+  <link href='site/externalstyle.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div class="container">
