--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>My webpage</title>
+  <title>My web</title>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-  <link href='site/externalstyle.css' rel='stylesheet' type='text/css'>
+  <link href='style.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div class="container">
