--- a/site/module3.html
+++ b/site/module3.html
@@ -7,7 +7,7 @@
   <title>Food, LLC</title>
   <link href="https://fonts.googleapis.com/css?family=Exo+2:400,500,600,700" rel="stylesheet">
   <link rel="stylesheet" href="bootstrap.min.css">
-  <link rel="stylesheet" href="externalstyle.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
