--- a/site/module4.html
+++ b/site/module4.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Module 4 Solution Starter</title>
-  <script src="SpeakHello.js"></script>
-  <script src="SpeakGoodBye.js"></script>
+  <title>Module 4 </title>
+  <script src="hello.js"></script>
+  <script src="goodbye.js"></script>
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1>Module 4 </h1>
   <p>open console to see the output</p>
 </body>
 </html>
